Tue Jul 11 13:04:00 BST 2000 Olly Betts

	* Changed various OmStem methods to take "const string &" instead of
	  "string"

Tue Jul 11 12:56:57 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Restored automake dependency checking for C files.

Tue Jul 11 12:54:15 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test to apitest to check the get_term{freq,weight} methods
	  of OmMSet.  Currently fails, since these are unimplemented. 

Tue Jul 11 11:37:00 BST 2000 Olly Betts

	* Added threadtest to .cvsignore

Tue Jul 11 11:04:00 BST 2000 Olly Betts

	* Added TODO for get_position_list() method on operators

Mon Jul 10 19:12:08 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More Solaris portability fixes.

Mon Jul 10 18:35:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added Norwegian stemming algorithm, and linked it into the build
	  system.

Mon Jul 10 18:19:28 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add an internal interface to OmMSet, to allow access to the
	  term frequency and weight information internally for setting it.
	  Add code so that LocalMatch is passed the map to store the
	  information in.

	* Fix tests so that internaltest compiles with CVS automake.
	  Hopefully it will still work with old automake.

Mon Jul 10 17:45:57 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added more code to RunTest.java

Sat Jul  8 14:26:00 BST 2000 Olly Betts

	* struct ByQueryIndexCmp -> class ByQueryIndexCmp so doxygen will
	  document it

Fri Jul  7 18:18:07 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmDatabase to java bindings

Fri Jul  7 17:31:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added OmMSet::get_termfreq() and OmMSet::get_termweight() methods,
	  for getting information about the terms involved in the query.
	  Implemented the methods, but not yet the process of putting the