@@ -1,3 +1,8 @@
+Tue Jul 11 18:35:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* More work on returning term frequency and weight information.
+	  Might even work now.
+
 Tue Jul 11 13:04:00 BST 2000 Olly Betts
 
 	* Changed various OmStem methods to take "const string &" instead of
